# droplesim

./: .gitignore  Makefile  flake.nix  pyproject.toml
config/: doe_tier1.json  doe_tier2.json  doe_tier3.json  doe_viscoelastic.json
config/benchmarks/: contact_angle.json  laplace.json  tomotika.json
data/: gen_full.dxf  generator.dxf  generator_full.dxf
src/droplesim/geometry/: dxf_to_voxel.py
src/droplesim/gui/: main.py  theme.py
src/droplesim/gui/dialogs/: edge_dialog.py
src/droplesim/gui/panels/: edge_panel.py
src/droplesim/gui/views/: edge_view.py  phase_view.py  sim_view.py
src/droplesim/scripts/: classify_regime.py  corridor_droplet_sweep.py  effect_analysis.py  extract_droplets.py  plot_regime_map.py  run_doe.py
src/droplesim/solver/: geometry2d.py  sim.py
src/droplesim/ui/: frame_buffer.py  main.py  state.py
src/droplesim/ui/dialogs/: area_bc_dialog.py  edge_dialog.py
src/droplesim/ui/panels/: edge_panel.py  params_panel.py  phase_panel.py
src/droplesim/ui/views/: edge_view.py  experiment_view.py  field_plot.py  geometry_view.py  phase_view.py  sim_view.py
src/droplesim/ui/workers/: sim_worker.py
tests/: test_droplet_integrity.py  test_geometry2d.py  test_phase_field.py  test_sim_units.py
