[project]
name = "droplesim"
version = "0.1.0"
description = "XLB-based LBM parametric study of Drop-seq microfluidics"
requires-python = ">=3.12"
dependencies = [
    # LBM framework (JAX-backed, 2D + 3D, GPU-native)
    "xlb>=0.3",
    # JAX — CPU build here; on the GPU server install jax[cuda12] separately:
    #   uv add "jax[cuda12_pip]" --find-links https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
    "jax>=0.4",
    # I/O + analysis
    "h5py>=3.10",
    "scipy>=1.12",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "ezdxf>=1.3",
    "pandas>=2.2",
    # UI — Qt desktop app
    "PySide6>=6.7",
    "pyqtgraph>=0.13",
    # Dev tools
    "ruff>=0.4",
    "dropletui>=0.1.1",
]

[project.scripts]
droplesim = "droplesim.ui.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/droplesim"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
