[project]
name = "droplesim"
version = "0.1.0"
description = "Pure-JAX LBM simulation for Drop-seq flow-focusing microfluidics"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.4.30",
    "h5py>=3.10",
    "scipy>=1.12",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "ezdxf>=1.3",
    "pandas>=2.2",
    "PySide6>=6.7",
    "pyqtgraph>=0.13",
    "ruff>=0.4",
    "dropletui>=0.1.1",
]

[project.optional-dependencies]
cuda = ["jax[cuda12]>=0.4.30"]

[project.scripts]
droplesim = "droplesim.ui.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/droplesim"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
